--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 
         <ul>
-            <li class="lista"><span>Home</span></li>
-            <li class="lista"><span>Products</span></li>
-            <li class="lista"><span>Contacts</span></li>
+            <li class="lista"><span id="main-12">Home</span></li>
+            <li class="lista"><span id="main-12">Products</span></li>
+            <li class="lista"><span id="main-12">Contacts</span></li>
         </ul>
+        
 
         <img id="logo" src="" alt="">
         <img  id="logo-r" src="" alt="">
@@ -36,8 +37,11 @@
         <div class="box-main"></div>            
 
             <div class="main-text">
-                <h1>NEW CLOTHE <span id="main-12">S DROP</span></h1>
                 <h1 id="main-c">NEW DR<span id="main-c2">OP</span></h1>
+            </div>
+
+            <div class="text-one">
+                <h1>NEW CLOTHE <span>S DROP</span></h1>
             </div>
 
             <a id="icon" href="./about/about.html"><p>DISCOVER</p><svg width="48" height="30" viewBox="0 0 48 30" fill="none" xmlns="http://www.w3.org/2000/svg">
